@@ -1,5 +1,6 @@
-DIST MP3Diags-0.99.04.026.tar.gz 866795 RMD160 1e375e179072a15b4a8a1f229b7f3f1b1bdd42d1 SHA1 8536ec6a623229476e31daad6aa5689dd4a90bbb SHA256 c7f281385bd73e3a6fbf5162cef40d7efdab6b8d7340770d20224700121edafa
-EBUILD mp3diags-0.99.04.026.ebuild 884 RMD160 da1e590bd73d14bc4a07e9704d0fc6afbd8cd4a2 SHA1 9dcc2481cbcf4aefec003ba9d700956140702c83 SHA256 0b2458ec073fda32c55bd695693578538052aeea3f725c7eb1a5d5074f9b1192
-EBUILD mp3diags-9999.ebuild 946 RMD160 001a536ae184890f759831238a4dca26703c9c91 SHA1 c2a95f083039454e73507c1b0d5c2a00283d99b4 SHA256 3e9c8283153838fd67e1a46e684b1ed59ebd67ed313c480cd490ae2be77da55c
-MISC ChangeLog 910 RMD160 a344e11108f2c1c4443c32bc8c3c8b2af73fd73d SHA1 ac014861b4cc68c1a5573ce3c25d4873750cda3e SHA256 3708bae90094d4e9ce8112eec90183a84ee797f801467b4f823269a87814d3fa
+DIST MP3Diags-0.99.05.029.tar.gz 882032 RMD160 787789d27a31f5df6749197da1c2fedf12f4e285 SHA1 d6025ccb023b9f58137c8b4f3562065003411b8e SHA256 42f831e7fc5dd9394f8d63d8e0cddb9d11679277b012ce9cdfeac0caac0768bf
+DIST MP3Diags_Src+Doc-0.99.05.029.tar.gz 2585091 RMD160 2ac538138295a9300174604f90a7b66ca4581bfe SHA1 c598655ee8160462b1de8624393f57b5a18f3c01 SHA256 bb2ce65e315a97d30397fdb3b2995a66aa67adb81ac013059ec060148222d363
+EBUILD mp3diags-0.99.05.029.ebuild 1079 RMD160 7dff74c8a4ad6e97cd3e8d0eb4babd610b3bb5f5 SHA1 4233ad35cdb7a6c7e7bf006a32e34fd0671ef90a SHA256 077e140d27105af46a058a2dfc77b7494ff24bc55050a406460d13e4e866f942
+EBUILD mp3diags-9999.ebuild 1076 RMD160 deb4f271eaf4fcaa76d0fb39c0648c5f8e70714c SHA1 bf40cf83271c151ee2b42ef3dfde45e97f5e0adf SHA256 e9b3fc19186398e70f139263e5563a4ef8aaa3205d4eb9d6f468abf1beae6c7e
+MISC ChangeLog 1143 RMD160 3a447d3fd741a89c4c9d25969091972b0a9a8512 SHA1 44f5f9433da5c1b1f4b286a7fc74758df99cca0b SHA256 8eeaba80bf0a7883b1ab02537ab785e2280e432aecadcf53b26335de2304222e
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
